src/test/ui/panic-implementation/panic-implementation-bad-signature-2.stderr
error: argument should be `&PanicInfo`
  --> $DIR/panic-implementation-bad-signature-2.rs:21:11
   |
LL |     info: &'static PanicInfo, //~ ERROR argument should be `&PanicInfo`
   |           ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

